--- a/index.html
+++ b/index.html
@@ -6,8 +6,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./assets/css/home.css">
     <title>Les Petits Plats</title>
     <meta name="description" content="Cooking recipes website" />
 </head>
+
+<body>
+    <header id="header" role="banner">
+        <a href="#" id="homepage-logo">
+            <img src="./PNG/logo.png" alt="Les petits plats">
+        </a>
+        <nav id="navigation">
+            <div id="main">
+                <label for="main__searchbar"></label>
+                <input type="search" id="main__searchbar" name="searchbar" aria-label="Search through site content" placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette">
+                <button id="main__button">
+                    <img src="./PNG/loupe.png" alt="Rechercher">
+                </button>
+            </div>
+            <div id="secondary">
+                <div id="secondary__blue">
+                    <label for="secondary__blue--searchbar"></label>
+                    <input type="search" id="secondary__blue--searchbar" name="searchbar" aria-label="Search through site content" placeholder="Ingredients">
+                    <button id="main__button">
+                        <img src="./PNG/chevron.png" alt="Rechercher">
+                    </button>
+                </div>
+                <div id="secondary__green">
+                    <label for="secondary__green--searchbar"></label>
+                    <input type="search" id="secondary__green--searchbar" name="searchbar" aria-label="Search through site content" placeholder="Appareil">
+                    <button id="main__button">
+                        <img src="./PNG/chevron.png" alt="Rechercher">
+                    </button>
+                </div>
+                <div id="secondary__red">
+                    <label for="secondary__green--searchbar"></label>
+                    <input type="search" id="secondary__green--searchbar" name="searchbar" aria-label="Search through site content" placeholder="Ustensiles">
+                    <button id="main__button">
+                        <img src="./PNG/chevron.png" alt="Rechercher">
+                    </button>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <section id="recipes-grid"></section>
+    </main>
+   
+</body>
