Grille de recettes + searchbar secondaires

--- a/index.html
+++ b/index.html
@@ -26,33 +26,37 @@
                 </button>
             </div>
             <div id="secondary">
-                <div id="secondary__blue">
-                    <label for="secondary__blue--searchbar"></label>
-                    <input type="search" id="secondary__blue--searchbar" name="searchbar" aria-label="Search through site content" placeholder="Ingredients">
-                    <button id="main__button">
+                <div id="secondary-blue">
+                    <label for="secondary-blue__searchbar"></label>
+                    <input type="search" id="secondary-blue__searchbar" name="searchbar" aria-label="Search through site content" placeholder="Ingredients">
+                    <button id="secondary-blue__button">
                         <img src="./PNG/chevron.png" alt="Rechercher">
                     </button>
+                    <ul id="secondary-blue__menu"></ul>
                 </div>
-                <div id="secondary__green">
-                    <label for="secondary__green--searchbar"></label>
-                    <input type="search" id="secondary__green--searchbar" name="searchbar" aria-label="Search through site content" placeholder="Appareil">
-                    <button id="main__button">
+                <div id="secondary-green">
+                    <label for="secondary-green__searchbar"></label>
+                    <input type="search" id="secondary-green__searchbar" name="searchbar" aria-label="Search through site content" placeholder="Appareil">
+                    <button id="secondary-green__button">
                         <img src="./PNG/chevron.png" alt="Rechercher">
                     </button>
+                    <ul id="secondary-green__menu"></ul>
                 </div>
-                <div id="secondary__red">
-                    <label for="secondary__green--searchbar"></label>
-                    <input type="search" id="secondary__green--searchbar" name="searchbar" aria-label="Search through site content" placeholder="Ustensiles">
-                    <button id="main__button">
+                <div id="secondary-red">
+                    <label for="secondary-red__searchbar"></label>
+                    <input type="search" id="secondary-red__searchbar" name="searchbar" aria-label="Search through site content" placeholder="Ustensiles">
+                    <button id="secondary-red__button">
                         <img src="./PNG/chevron.png" alt="Rechercher">
                     </button>
+                    <ul id="secondary-red__menu"></ul>
                 </div>
             </div>
         </nav>
     </header>
 
     <main>
-        <section id="recipes-grid"></section>
+        <section class="recipes-grid"></section>
     </main>
-   
+<script src="https://kit.fontawesome.com/7de816d9e9.js" crossorigin="anonymous"></script>
+<script type="text/javascript" src="./assets/javascript/recipes.js"></script> 
 </body>
