Static Page + récupération des données de recipes

--- a/index.html
+++ b/index.html
@@ -29,33 +29,33 @@
                 <div id="secondary-blue">
                     <label for="secondary-blue__searchbar"></label>
                     <input type="search" id="secondary-blue__searchbar" name="searchbar" aria-label="Search through site content" placeholder="Ingredients">
-                    <button id="secondary-blue__button">
+                    <button id="secondary-blue__button" class="secondary__button">
                         <img src="./PNG/chevron.png" alt="Rechercher">
                     </button>
-                    <ul id="secondary-blue__menu"></ul>
+                    <ul id="secondary-blue__menu" class="secondary__menu"></ul>
                 </div>
                 <div id="secondary-green">
                     <label for="secondary-green__searchbar"></label>
                     <input type="search" id="secondary-green__searchbar" name="searchbar" aria-label="Search through site content" placeholder="Appareil">
-                    <button id="secondary-green__button">
+                    <button id="secondary-green__button" class="secondary__button">
                         <img src="./PNG/chevron.png" alt="Rechercher">
                     </button>
-                    <ul id="secondary-green__menu"></ul>
+                    <ul id="secondary-green__menu" class="secondary__menu"></ul>
                 </div>
                 <div id="secondary-red">
                     <label for="secondary-red__searchbar"></label>
                     <input type="search" id="secondary-red__searchbar" name="searchbar" aria-label="Search through site content" placeholder="Ustensiles">
-                    <button id="secondary-red__button">
+                    <button id="secondary-red__button" class="secondary__button">
                         <img src="./PNG/chevron.png" alt="Rechercher">
                     </button>
-                    <ul id="secondary-red__menu"></ul>
+                    <ul id="secondary-red__menu" class="secondary__menu"></ul>
                 </div>
             </div>
         </nav>
     </header>
 
     <main>
-        <section class="recipes-grid"></section>
+        <section id="recipes-grid"></section>
     </main>
 <script src="https://kit.fontawesome.com/7de816d9e9.js" crossorigin="anonymous"></script>
 <script type="text/javascript" src="./assets/javascript/recipes.js"></script> 
