--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav id="navigation">
             <div id="main">
                 <label for="main__searchbar"></label>
-                <input type="search" id="main__searchbar" name="searchbar" aria-label="Search through site content" placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette">
+                <input type="search" id="main__searchbar" name="searchbar" aria-label="Search through site content" placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette" minlength="3">
                 <button id="main__button">
                     <img src="./PNG/loupe.png" alt="Rechercher">
                 </button>
@@ -28,7 +28,7 @@
             <div id="secondary">
                 <div id="secondary-blue">
                     <label for="secondary-blue__searchbar"></label>
-                    <input type="search" id="secondary-blue__searchbar" name="searchbar" aria-label="Search through site content" placeholder="Ingredients">
+                    <input type="search" id="secondary-blue__searchbar" name="searchbar" aria-label="Search through site content" placeholder="Ingredients" minlength="3">
                     <button id="secondary-blue__button" class="secondary__button">
                         <img src="./PNG/chevron.png" alt="Rechercher">
                     </button>
@@ -36,7 +36,7 @@
                 </div>
                 <div id="secondary-green">
                     <label for="secondary-green__searchbar"></label>
-                    <input type="search" id="secondary-green__searchbar" name="searchbar" aria-label="Search through site content" placeholder="Appareil">
+                    <input type="search" id="secondary-green__searchbar" name="searchbar" aria-label="Search through site content" placeholder="Appareils" minlength="3">
                     <button id="secondary-green__button" class="secondary__button">
                         <img src="./PNG/chevron.png" alt="Rechercher">
                     </button>
@@ -44,7 +44,7 @@
                 </div>
                 <div id="secondary-red">
                     <label for="secondary-red__searchbar"></label>
-                    <input type="search" id="secondary-red__searchbar" name="searchbar" aria-label="Search through site content" placeholder="Ustensiles">
+                    <input type="search" id="secondary-red__searchbar" name="searchbar" aria-label="Search through site content" placeholder="Ustensiles" minlength="3">
                     <button id="secondary-red__button" class="secondary__button">
                         <img src="./PNG/chevron.png" alt="Rechercher">
                     </button>
