--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <button id="main__button">
                     <img src="./PNG/loupe.png" alt="Rechercher">
                 </button>
+                <div id="tag-container"></div>
             </div>
             <div id="secondary">
                 <div id="secondary-blue">
