No results message

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 
     <main>
         <section id="recipes-grid"></section>
+        <section id="no-result">
+            Aucune recette ne correspond à votre critère… vous pouvez chercher « tarte aux pommes », « poisson », etc.
+        </section>
     </main>
 <script src="https://kit.fontawesome.com/7de816d9e9.js" crossorigin="anonymous"></script>
 <script type="text/javascript" src="./assets/javascript/recipes.js"></script> 
