--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div id="secondary">
                 <div id="secondary-blue">
                     <label for="secondary-blue__searchbar"></label>
-                    <input type="search" id="secondary-blue__searchbar" name="searchbar" aria-label="Search through site content" placeholder="Ingredients" minlength="3">
+                    <input type="search" id="secondary-blue__searchbar" class="input" name="searchbar" aria-label="Search through site content" placeholder="Ingredients" minlength="3">
                     <button id="secondary-blue__button" class="secondary__button">
                         <img src="./PNG/chevron.png" alt="Rechercher">
                     </button>
@@ -37,7 +37,7 @@
                 </div>
                 <div id="secondary-green">
                     <label for="secondary-green__searchbar"></label>
-                    <input type="search" id="secondary-green__searchbar" name="searchbar" aria-label="Search through site content" placeholder="Appareils" minlength="3">
+                    <input type="search" id="secondary-green__searchbar" class="input" name="searchbar" aria-label="Search through site content" placeholder="Appareils" minlength="3">
                     <button id="secondary-green__button" class="secondary__button">
                         <img src="./PNG/chevron.png" alt="Rechercher">
                     </button>
@@ -45,7 +45,7 @@
                 </div>
                 <div id="secondary-red">
                     <label for="secondary-red__searchbar"></label>
-                    <input type="search" id="secondary-red__searchbar" name="searchbar" aria-label="Search through site content" placeholder="Ustensiles" minlength="3">
+                    <input type="search" id="secondary-red__searchbar" class="input" name="searchbar" aria-label="Search through site content" placeholder="Ustensiles" minlength="3">
                     <button id="secondary-red__button" class="secondary__button">
                         <img src="./PNG/chevron.png" alt="Rechercher">
                     </button>
